feat: retrieving JWKs based on Gravitee WebClient
closes AM-3303