@@ -18,12 +18,12 @@ package io.gravitee.am.identityprovider.common.oauth2.jwt.jwks.remote;
 import com.nimbusds.jose.jwk.source.JWKSource;
 import com.nimbusds.jose.jwk.source.JWKSourceBuilder;
 import com.nimbusds.jose.proc.SecurityContext;
-import com.nimbusds.jose.util.DefaultResourceRetriever;
+import com.nimbusds.jose.util.ResourceRetriever;
 import com.nimbusds.jose.util.health.HealthStatus;
 import io.gravitee.am.identityprovider.api.oidc.jwt.JWKSourceResolver;
 import lombok.extern.slf4j.Slf4j;
 
-import java.net.URL;
+import java.net.URI;
 
 /**
  * @author Titouan COMPIEGNE (titouan.compiegne at graviteesource.com)
@@ -33,30 +33,18 @@ import java.net.URL;
 public class RemoteJWKSourceResolver<C extends SecurityContext> implements JWKSourceResolver<C> {
 
     private final String url;
-    private int connectionTimeout;
-    private int readTimeout;
+    private final ResourceRetriever retriever;
 
-    public RemoteJWKSourceResolver(String url, int connectionTimeout, int readTimeout) {
+    public RemoteJWKSourceResolver(ResourceRetriever retriever, String url) {
         this.url = url;
-        this.connectionTimeout = connectionTimeout;
-        this.readTimeout = readTimeout;
-    }
-
-    public RemoteJWKSourceResolver(String url) {
-        this.url = url;
+        this.retriever = retriever;
     }
 
     @Override
     @SuppressWarnings("unchecked")
     public JWKSource<C> resolve() {
-        DefaultResourceRetriever retriever;
-        if (connectionTimeout == 0 || readTimeout == 0) {
-            retriever = new DefaultResourceRetriever();
-        } else {
-            retriever = new DefaultResourceRetriever(connectionTimeout, readTimeout);
-        }
         try {
-            return (JWKSource<C>) JWKSourceBuilder.create(new URL(url), retriever)
+            return (JWKSource<C>) JWKSourceBuilder.create(URI.create(url).toURL(), retriever)
                     .outageTolerant(true)
                     .retrying(true)
                     .healthReporting((healthReport) -> {
